--- a/testsuite/integration/pom.xml
+++ b/testsuite/integration/pom.xml
@@ -414,6 +414,15 @@
                     </systemPropertyVariables>
 
                 </configuration>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/WSTrustTestCase.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
