--- a/testsuite/integration/ws/pom.xml
+++ b/testsuite/integration/ws/pom.xml
@@ -435,6 +435,9 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <runOrder>alphabetical</runOrder>
+                            <excludes>
+                                <exclude>**/WSTrustTestCase.java</exclude>
+                            </excludes>
                         </configuration>
                         <executions>
 
